# memory-preflight

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/memory_preflight/: __init__.py  __main__.py  _governance.py
tests/: __init__.py  test_governance.py
